--- a/Wk3_crawlingslimejs/index.html
+++ b/Wk3_crawlingslimejs/index.html
@@ -7,6 +7,6 @@
     <script src="Slime.js"></script>
     <script src="sketch.js"></script>
   </head>
-  <body>
+  <body style="background: #111111">
   </body>
 </html>
